+для записи доки+

--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/buh.html
@@ -156,7 +156,7 @@
 
 
 
-<div class="ms-rteElement-Callout4"><div><span>Необходимые&#160;документы для поступления:</span></div>
+<div class="ms-rteElement-Callout4"><div><span>Для записи на обучение необходимо представить:</span></div>
 <ul><li><span><a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</span></li>
 
 <li>
