--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/fin-men.html
@@ -47,7 +47,7 @@
 <div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
-				
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -75,7 +75,7 @@
 					​8  - 10 месяцев
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -103,7 +103,7 @@
 					</ul>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -112,7 +112,7 @@
 				</td>
 				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p class="ms-rteElement-P">защита <a target="_blank" href="/fil/smolensk/dpo/normativdocs/%D0%9F%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%961781%D0%BE%20%D0%BE%D1%82%2030.09.2014.pdf">выпускной​ аттестационной работы​</a>
-				</p>
+					</p>
 				</td>
 			</tr>
 			<tr class="ms-rteTableOddCol-1">
@@ -125,7 +125,7 @@
 					<p class="ms-rteElement-P">​30 000 руб. (<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf">скачать реквизиты оплаты</a>)</p>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
@@ -134,8 +134,8 @@
 				</td>
 				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p class="ms-rteElement-P">
-					<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной переподготовке</a>&#160;установленного образца​
-				</p>
+						<a target="_blank" href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg">диплом о профессиональной переподготовке</a>&#160;установленного образца​
+					</p>
 				</td>
 			</tr>
 		</tbody>
@@ -158,7 +158,7 @@
 
 
 <div>
-	
+
 	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
 	<p class="ms-rteElement-P">
 		<strong>Базовые дисциплины</strong>
@@ -199,8 +199,9 @@
 		</li>
 		<li>
 			<div class="ms-rteElement-P">Финансовое <span>планирование</span> и <span>прогнозированние <span style="display: inline-block;">
+					</span>
 				</span>
-			</span></div>
+			</div>
 		</li>
 
 		<li>
@@ -214,16 +215,62 @@
 		<li>Оценка стоимости и бизнеса<br/>
 		</li>
 	</ul>
+	
+	
+	
+	
+	
+	
+	<div class="ms-rteElement-Callout4">
+	<div>Для записи на обучение необходимо представить:</div>
+	<ul>
+		<li>
+			<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
+		<li>
+			<font color="#03497e">
+				<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
+			</font>;</li>
+		<li>
+			<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">договоры:</a>
+			<ul>
+				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+				</a>
+				<li>
+					<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
+					</a>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+				</li>
+				<li>
+					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+				</li>
+			</ul>
+		</li>
+		<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
+	</ul>
+</div>
+
+	
+	
+	
+	
+	
+	
+	
+	
 	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
 	<ul>
 		<li>
 			<a href="/fil/smolensk/dpo/Documents/Kval/%D0%A2%D0%B5%D0%BC%D1%8B%20%D0%92%D0%90%D0%A0-%20%D0%A4%D0%9C.pdf">Рекомендуемые темы</a>
 			<br/>
 			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
-		</a></li>
-<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
-		</a><li><a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
-			</a><a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+			</a>
+		</li>
+		<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+		</a>
+		<li>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
+			</a>
+			<a href="/fil/smolensk/dpo/retraining/Documents/%D0%9F%D0%BE%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BE%20%D0%92%D0%90%D0%A0%20%D1%81%D0%BB%D1%83%D1%88%D0%B0%D1%82%D0%B5%D0%BB%D0%B5%D0%B9%20(%D0%BF%D1%80%D0%B8%D0%BA%D0%B0%D0%B7%20%E2%84%96%201781_%D0%BE%20%D0%BE%D1%82%2030.09.2014).pdf">
 				<span>Методические указания по написанию и защите выпускной&#160; аттестационной <br/>работы слушателями&#160; дополнительного профессионального образования (профессиональная переподготовка<span style="display: inline-block;">)</span>
 				</span>
 			</a>
@@ -237,30 +284,8 @@
 <div>
 	<br/>
 </div>
-</div>
 
 
 
 
-<div class="ms-rteElement-Callout4">
-		<div>Необходимые&#160;документы для поступления:</div>
-		<ul>
-			<li>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
-			<li>
-				<font color="#03497e">
-					<a target="_blank" href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx">заявление</a>
-				</font>;</li>
-			<li>
-				<a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">договоры:</a><ul><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
-					</a><li><a target="_blank" href="/fil/smolensk/dpo/Documents/dogovor.docx">
-					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
-				</ul>
-			</li>
-			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
-		</ul>
-	</div>
+
