--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/per_vsfer_prof.html
@@ -299,7 +299,7 @@
 
 
 <div class="ms-rteElement-Callout4">
-	<div>Необходимые документы для поступления:</div>
+	<div>Для записи на обучение необходимо представить:</div>
 	<ul>
 		<li>
 			анкета;</li>
