--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/prav_reg.html
@@ -378,7 +378,7 @@
 
 <div>
 	<div class="ms-rteElement-Callout4">
-		<div>Необходимые&#160;документы для поступления:</div>
+		<div>Для записи на обучение необходимо представить:</div>
 		<ul>
 			<li>
 				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
