--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/spec_zakup.html
@@ -250,7 +250,7 @@
 		
 		
 <div class="ms-rteElement-Callout4">
-	<div>Необходимые&#160;документы для поступления:</div>
+	<div>Для записи на обучение необходимо представить:</div>
 		<ul>
 			<li>
 				<a target="_blank" href="/fil/smolensk/dpo/Documents/anketa.docx">анкета</a>;</li>
