--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/gos_mu_upr.html
@@ -160,7 +160,7 @@
 
 <div>
 	<div class="ms-rteElement-Callout4">
-		<div>Необходимые&#160;документы для поступления:</div>
+		<div>Для записи на обучение необходимо представить:</div>
 		<ul>
 			<li>
 				<a href="/fil/smolensk/dpo/Documents/anketa.docx" target="_blank">анкета</a>;</li>
@@ -216,7 +216,7 @@
 {size:612.0pt 792.0pt;margin:2.0cm 42.5pt 2.0cm 3.0cm;}
 .ExternalClass div.WordSection1
 {page:WordSection1;}
-		</style>
+</style>
 
 
 
