для записи вниз над материалами

--- a/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
+++ b/src/com/company/Site/ru/fa/old/fil/smolensk/dpo/retraining/Pages/ekupr.html
@@ -47,7 +47,7 @@
 <div id="myblank">
 	<table class="MsoNormalTable ms-rteTable-1" cellspacing="0" cellpadding="15" border="0">
 		<tbody style="font-size: 14pt;">
-				
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -75,7 +75,7 @@
 					​8 - 10 месяцев
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -103,7 +103,7 @@
 					</ul>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" style="padding: 15pt;">
 					<b>
@@ -125,10 +125,10 @@
 				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p class="ms-rteElement-P">​
 					30 000 руб. (<a href="/fil/smolensk/dpo/retraining/Documents/bank_smolensk.pdf" target="_blank">скачать реквизиты оплаты</a>)
-				</p>
+					</p>
 				</td>
 			</tr>
-			
+
 			<tr class="ms-rteTableEvenRow-1">
 				<td class="ms-rteTableEvenCol-1" width="35%" valign="middle" style="padding: 15pt;">
 					<b>
@@ -137,8 +137,8 @@
 				</td>
 				<td class="ms-rteTableOddCol-1" width="65%" style="border-style: solid solid solid none; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 15pt;">
 					<p class="ms-rteElement-P">
-					<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной переподготовке</a>&#160;установленного образца​
-				</p>
+						<a href="/fil/smolensk/dpo/retraining/PublishingImages/diplom.jpg" target="_blank">диплом о профессиональной переподготовке</a>&#160;установленного образца​
+					</p>
 				</td>
 			</tr>
 		</tbody>
@@ -161,6 +161,72 @@
 
 
 <div>
+
+
+
+
+
+
+
+
+
+
+	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
+	<p class="ms-rteElement-P">
+		<strong>Базовые дисциплины</strong>
+	</p>
+	<ul>
+		<li>
+			<span>Базовые дисциплины</span>
+		</li>
+		<li>
+			<span>
+				<span style="display: inline-block;">Менеджмент</span>
+			</span>
+		</li>
+		<li>
+			<span>Экономика организаций</span>
+		</li>
+		<li>
+			<span>Трудовое право</span>
+		</li>
+		<li>
+			<span>Бухгалтерский учет<span style="display: inline-block;">
+					<span style="display: inline-block;">
+					</span>
+				</span>
+			</span>
+		</li>
+	</ul>
+	<p>
+		<strong>Специальные дисциплины</strong>
+		<br/>
+	</p>
+	<ul>
+		<li>Специальные дисциплины</li>
+		<li>Экономика и социология труда</li>
+		<li>Рынок труда</li>
+		<li>Управление персоналом<span style="display: inline-block;">
+			</span>
+		</li>
+		<li>Управление человеческими ресурсами</li>
+		<li>Организационное поведение</li>
+		<li>Корпоративная социальная ответственность</li>
+		<li>Кадровое делопроизводство</li>
+		<li>Информационные системы в управлении персоналом</li>
+		<li>Стратегическое планирование&#160; и развитие карьеры</li>
+		<li>Аудит и контроллинг персонала</li>
+		<li>Инновационный менеджмент в управлении персоналом</li>
+	</ul>
+	<p>
+		<br/>
+	</p>
+	
+	
+	
+	
+	
+	
 	<div class="ms-rteElement-Callout4">
 		<div>Для записи на обучение необходимо представить:</div>
 		<ul>
@@ -171,13 +237,18 @@
 					<a href="/fil/smolensk/dpo/retraining/Documents/zayav-pp.docx" target="_blank">заявление</a>
 				</font>;</li>
 			<li>
-				<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">договоры:</a><ul><a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
-					</a><li><a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
-					</a><a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
-				</li>
-				<li>
-					<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
-				</li>
+				<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">договоры:</a>
+				<ul>
+					<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
+					</a>
+					<li>
+						<a href="/fil/smolensk/dpo/Documents/dogovor.docx" target="_blank">
+						</a>
+						<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Fiz_lico.docx">Физическое лицо</a>
+					</li>
+					<li>
+						<a href="/fil/smolensk/dpo/retraining/Documents/Dogovor_PP_Ur_lico.docx">Юридическое лицо</a>
+					</li>
 				</ul>
 			</li>
 			<li>другие документы (копия паспорта,&#160;копия документа&#160;об образовании,&#160;фотографии&#160;и&#160;др.)</li>
@@ -193,59 +264,6 @@
 	
 	
 	
-	<h3 class="ms-rteElement-H3B">Перечень дисциплин</h3>
-	<p class="ms-rteElement-P">
-		<strong>Базовые дисциплины</strong>
-	</p>
-	<ul>
-		<li>
-			<span>Базовые дисциплины</span>
-		</li>
-		<li>
-			<span>
-				<span style="display: inline-block;">Менеджмент</span>
-		</span></li>
-		<li>
-			<span>Экономика организаций</span>
-		</li>
-		<li>
-			<span>Трудовое право</span>
-		</li>
-		<li>
-			<span>Бухгалтерский учет<span style="display: inline-block;">
-					<span style="display: inline-block;">
-				</span>
-			</span>
-		</span></li>
-	</ul>
-	<p>
-		<strong>Специальные дисциплины</strong>
-		<br/>
-	</p>
-	<ul>
-		<li>Специальные дисциплины</li>
-		<li>Экономика и социология труда</li>
-		<li>Рынок труда</li>
-		<li>Управление персоналом<span style="display: inline-block;">
-		</span></li>
-		<li>Управление человеческими ресурсами</li>
-		<li>Организационное поведение</li>
-		<li>Корпоративная социальная ответственность</li>
-		<li>Кадровое делопроизводство</li>
-		<li>Информационные системы в управлении персоналом</li>
-		<li>Стратегическое планирование&#160; и развитие карьеры</li>
-		<li>Аудит и контроллинг персонала</li>
-		<li>Инновационный менеджмент в управлении персоналом</li>
-	</ul>
-	<p>
-		<br/>
-	</p>
-	<p>
-		<br/>
-	</p>
-	<p>
-		<br/>
-	</p>
 	<h3 class="ms-rteElement-H3B">Материалы для слушателей</h3>
 	<ul>
 		<li>
